<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shanghai Reds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="timerVal">0:00</string>
    <string name="deliveredButtonLabel">Delivered</string>
    <string name="clearedButtonLabel">Cleared</string>
    <string name="backButtonValue">Back</string>
    <string name="doneButtonValue">Done</string>
</resources>