<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#277118"
    android:layout_height="match_parent"
    android:id="@+id/backgroundHome">

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="#000000"
        android:text="@string/timerVal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <Button
        android:id="@+id/deliveredButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="38dp"
        android:text="@string/deliveredButtonLabel" />

    <Button
        android:id="@+id/clearedButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/deliveredButton"
        android:layout_alignBottom="@+id/deliveredButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/clearedButtonLabel" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/backButtonValue"
        android:layout_below="@+id/deliveredButton"
        android:layout_alignLeft="@+id/deliveredButton"
        android:layout_alignStart="@+id/deliveredButton"
        android:layout_marginTop="24dp"
        android:layout_alignRight="@+id/deliveredButton"
        android:layout_alignEnd="@+id/deliveredButton" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:text="@string/doneButtonValue"
        android:layout_alignTop="@+id/backButton"
        android:layout_alignLeft="@+id/clearedButton"
        android:layout_alignStart="@+id/clearedButton"
        android:layout_alignRight="@+id/clearedButton"
        android:layout_alignEnd="@+id/clearedButton" />

</RelativeLayout>
